# ui-eval-harness

./: .env.sample  .gitignore  .pre-commit-config.yaml  Makefile  README.md  dbt_project.yml  pyproject.toml
.github/workflows/: ci.yml
artifacts/samples/demo/: index.html
dbt/: .user.yml  dbt_project.yml  profiles.yml
dbt/models/staging/: stg_generation.sql
goldens/html/: t_001.html
prompts/tasks/: t_001.yaml
prompts/templates/: template_A.j2
src/app/: Home.py
src/app/pages/: 1_Rater.py  2_Metrics.py  3_Admin.py
src/ui_eval_harness/backends/: base.py  ollama.py  openai.py
src/ui_eval_harness/db/: contracts.py  io.py
src/ui_eval_harness/eval/: irr.py  rubric.py  validators.py
src/ui_eval_harness/runners/: experiment.py  seed.py
tests/: test_contracts.py
